--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact | Style & Trend</title>
-  <link rel="stylesheet" href="style.css"/>
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,58 +23,35 @@
       <a href="products.html">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html" class="active">Contact</a>
-      <a href="cart.html">
-        Cart <span id="cartCount" class="cart-badge">0</span>
-      </a>
+      <a href="cart.html">Cart <span class="cart-badge" id="cartCount">0</span></a>
     </nav>
   </div>
 </header>
 
 <section class="section">
   <div class="container">
-    <h2 class="section-title">Contact</h2>
-    <p class="section-sub">Questions about sizing, shipping, collaborations or press? Send a message.</p>
 
-    <div class="grid-3">
-      <div class="card"><div class="card-body"><h3>Customer Support</h3><p><strong>support@styletrend.com</strong></p><p>Response time: 24–48 hours</p></div></div>
-      <div class="card"><div class="card-body"><h3>Phone</h3><p><strong>+90 532 847 29 61</strong></p><p>Mon–Fri · 10:00–18:00</p></div></div>
-      <div class="card"><div class="card-body"><h3>Business</h3><p><strong>biz@styletrend.com</strong></p><p>Press / Wholesale / Collaboration</p></div></div>
+    <h2 class="section-title">Send a Message</h2>
+
+    <div class="contact-form">
+      <form>
+        <input type="text" placeholder="Your name">
+        <input type="email" placeholder="you@email.com">
+
+        <input class="full" type="text" placeholder="Shipping / sizing / collaboration">
+        <textarea class="full" placeholder="Write your message..."></textarea>
+
+        <button class="btn btn-primary full" type="submit">Send</button>
+      </form>
     </div>
 
-    <div class="section" style="padding:18px 0;">
-      <div class="split">
-        <div class="card">
-          <div class="card-body">
-            <h3>Send a Message</h3>
-            <form class="form" onsubmit="event.preventDefault(); alert('Message sent!');">
-              <label>Name
-                <input type="text" placeholder="Your name" required>
-              </label>
-              <label>Email
-                <input type="email" placeholder="you@email.com" required>
-              </label>
-              <label>Subject
-                <input type="text" placeholder="Shipping / sizing / collaboration...">
-              </label>
-              <label>Message
-                <textarea rows="6" placeholder="Write your message..." required></textarea>
-              </label>
-              <button class="btn btn-primary" type="submit">Send</button>
-            </form>
-          </div>
-        </div>
+    <div class="contact-location">Tuzla · Istanbul</div>
 
-        <div>
-          <h3 class="section-title" style="font-size:18px;">Location</h3>
-          <p class="section-sub">Tuzla · Istanbul</p>
-          <iframe class="map"
-            src="https://www.google.com/maps?q=Tuzla%20Istanbul&output=embed"
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            title="Map">
-          </iframe>
-        </div>
-      </div>
+    <div class="contact-map">
+      <iframe
+        src="https://www.google.com/maps?q=Tuzla%20Istanbul&output=embed"
+        loading="lazy">
+      </iframe>
     </div>
 
   </div>
@@ -77,21 +61,20 @@
   <div class="footer-inner">
     <div>© 2026 Style & Trend</div>
     <div>
-      <a href="index.html">Home</a> ·
-      <a href="products.html">Products</a> ·
-      <a href="about.html">About</a>
+      <a href="products.html">Shop</a> ·
+      <a href="about.html">About</a> ·
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </footer>
 
 <script>
-  function getCart() {
+  function getCart(){
     return JSON.parse(localStorage.getItem("cart") || "[]");
   }
-  function updateCartCount() {
+  function updateCartCount(){
     const el = document.getElementById("cartCount");
-    if (!el) return;
-    el.textContent = getCart().length;
+    if(el) el.textContent = getCart().length;
   }
   window.addEventListener("load", updateCartCount);
 </script>
