--- a/about.html
+++ b/about.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Style & Trend</title>
 
-  <!-- FAVICON -->
   <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="style.css"/>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -28,11 +29,40 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="section-title">About Style & Trend</h2>
+    <h2 class="section-title">Our Story</h2>
     <p class="section-sub">
-      Style & Trend is a modern fashion brand focused on clean design,
-      everyday wearability and premium-feel essentials.
+      Style & Trend is a modern fashion brand based in Istanbul, focused on clean design,
+      comfort and premium-feel essentials.
     </p>
+
+    <div class="grid-2">
+      <!-- ✅ ABOUT RESİMLERİ ARTIK KIRPILMAZ -->
+      <div class="about-media">
+        <img src="images/about1.jpg" alt="Studio Mood">
+      </div>
+      <div class="about-media">
+        <img src="images/about2.jpg" alt="Materials & Details">
+      </div>
+    </div>
+
+    <div style="height:18px;"></div>
+
+    <div class="grid-2">
+      <div class="about-media">
+        <img src="images/about3.jpg" alt="Behind the scenes">
+      </div>
+      <div class="card card-body">
+        <h3>What we focus on</h3>
+        <p>
+          We keep things simple: strong silhouettes, neutral tones and pieces that work every day.
+          Our goal is to build a wardrobe that feels premium without being overdone.
+        </p>
+        <p>
+          From fabric selection to finishing, we prioritize consistency — fewer drops, better pieces.
+        </p>
+      </div>
+    </div>
+
   </div>
 </section>
 
