--- a/about.html
+++ b/about.html
@@ -29,38 +29,69 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="section-title">Our Story</h2>
-    <p class="section-sub">
-      Style & Trend is a modern fashion brand based in Istanbul, focused on clean design,
-      comfort and premium-feel essentials.
-    </p>
+    <h2 class="section-title">About Us</h2>
 
-    <div class="grid-2">
-      <!-- ✅ ABOUT RESİMLERİ ARTIK KIRPILMAZ -->
-      <div class="about-media">
-        <img src="images/about1.jpg" alt="Studio Mood">
-      </div>
-      <div class="about-media">
-        <img src="images/about2.jpg" alt="Materials & Details">
+    <!-- ✅ ESKİ YAZI GERİ GELDİ -->
+    <p class="section-sub">We are a fashion brand based in Istanbul, Turkey.</p>
+
+    <div class="card">
+      <div class="card-body">
+        <h3>Our Story</h3>
+        <p>
+          Style & Trend started as a simple idea: build a wardrobe that feels premium and modern,
+          without being overdone. We keep designs clean, easy to wear, and consistent — so you can
+          style pieces again and again.
+        </p>
+        <p>
+          Our collections blend street influence with minimal luxury details. We focus on fit,
+          comfort and finishing, because a good piece should feel right the moment you put it on.
+        </p>
       </div>
     </div>
 
-    <div style="height:18px;"></div>
+    <div style="height:14px;"></div>
+
+    <!-- ✅ FOTOĞRAFLAR KIRPILMASIN DİYE about-media KULLANIYORUM -->
+    <div class="grid-2">
+      <div class="about-media">
+        <img src="images/edit1.jpg" alt="Studio Mood">
+      </div>
+      <div class="about-media">
+        <img src="images/edit2.jpg" alt="Details">
+      </div>
+    </div>
+
+    <div style="height:14px;"></div>
 
     <div class="grid-2">
       <div class="about-media">
-        <img src="images/about3.jpg" alt="Behind the scenes">
+        <img src="images/edit3.jpg" alt="Editorial">
       </div>
-      <div class="card card-body">
-        <h3>What we focus on</h3>
-        <p>
-          We keep things simple: strong silhouettes, neutral tones and pieces that work every day.
-          Our goal is to build a wardrobe that feels premium without being overdone.
-        </p>
-        <p>
-          From fabric selection to finishing, we prioritize consistency — fewer drops, better pieces.
-        </p>
+
+      <div class="card">
+        <div class="card-body">
+          <h3>What we care about</h3>
+          <p>
+            <strong>Quality First:</strong> We keep fabric and stitching standards high.
+            Pieces should hold their form and feel good long-term.
+          </p>
+          <p>
+            <strong>Clean Design:</strong> Minimal palette, strong silhouettes, easy styling.
+          </p>
+          <p>
+            <strong>Focused Drops:</strong> Fewer pieces, better wardrobe building.
+          </p>
+          <p>
+            If you want to collaborate or ask sizing questions, use the Contact page — we reply as fast as possible.
+          </p>
+        </div>
       </div>
+    </div>
+
+    <div style="height:14px;"></div>
+
+    <div class="about-media">
+      <img src="images/edit4.jpg" alt="Behind the scenes">
     </div>
 
   </div>
