--- a/products.html
+++ b/products.html
@@ -1,130 +1,137 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Products | Style & Trend</title>
+/* ===== Clean theme (course-level, but looks good) ===== */
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family: Arial, sans-serif;
+  background:#f4f4f4;
+  color:#111;
+  line-height:1.6;
+}
 
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="style.css"/>
+.container{max-width:1100px;margin:0 auto;padding:0 16px}
+.section{padding:40px 0}
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
-<body>
+a{color:inherit;text-decoration:none}
+a:hover{text-decoration:underline}
 
-<header class="nav">
-  <div class="nav-inner">
-    <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
-    <nav class="menu">
-      <a href="index.html">Home</a>
-      <a href="products.html" class="active">Products</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="cart.html">Cart <span id="cartCount" class="cart-badge">0</span></a>
-    </nav>
-  </div>
-</header>
+/* Navbar */
+.navbar{
+  background:#fff;
+  border-bottom:1px solid #e6e6e6;
+  position:sticky;top:0;z-index:10;
+}
+.navbar .container{
+  display:flex;align-items:center;justify-content:space-between;
+  padding:14px 16px;
+}
+.logo{font-weight:800;letter-spacing:1px}
+.logo span{color:#ff5fa2}
 
-<section class="section">
-  <div class="container">
-    <h2 class="section-title">Our Collection</h2>
-    <p class="section-sub">Modern, stylish and affordable fashion pieces.</p>
+.nav-links{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+.nav-links a{
+  font-weight:700;
+  font-size:14px;
+  padding:6px 10px;
+  border-radius:8px;
+  opacity:.85;
+}
+.nav-links a.active{background:#f1f1f1;opacity:1}
+.badge{
+  background:#111;color:#fff;
+  border-radius:999px;
+  padding:2px 8px;
+  font-size:12px;
+}
 
-    <div class="products-grid">
+/* Titles */
+h1{font-size:34px;margin-bottom:10px}
+h2{font-size:24px;margin-bottom:10px}
+p.muted{color:#666;margin-bottom:16px}
 
-      <div class="card">
-        <div class="product-img">
-          <img src="images/urun1.jpg" alt="Oversized T-Shirt">
-        </div>
-        <div class="card-body">
-          <h3>Oversized T-Shirt</h3>
-          <div class="price">$29.99</div>
-          <p class="section-sub" style="margin:8px 0 12px;">Heavyweight cotton, relaxed fit, everyday essential.</p>
-          <button class="btn btn-primary" onclick="addToCart('Oversized T-Shirt', 29.99)">Add to Cart</button>
-        </div>
-      </div>
+/* Buttons */
+.btn{
+  display:inline-block;
+  padding:10px 14px;
+  border-radius:10px;
+  font-weight:800;
+  font-size:14px;
+  border:none;
+  cursor:pointer;
+}
+.btn-dark{background:#111;color:#fff}
+.btn-light{background:#eaeaea;color:#111}
 
-      <div class="card">
-        <div class="product-img">
-          <img src="images/urun2.jpg" alt="Luxury Jacket">
-        </div>
-        <div class="card-body">
-          <h3>Luxury Jacket</h3>
-          <div class="price">$99.99</div>
-          <p class="section-sub" style="margin:8px 0 12px;">Structured layering piece with premium finishing.</p>
-          <button class="btn btn-primary" onclick="addToCart('Luxury Jacket', 99.99)">Add to Cart</button>
-        </div>
-      </div>
+/* Cards */
+.card{
+  background:#fff;
+  border:1px solid #e6e6e6;
+  border-radius:14px;
+  overflow:hidden;
+}
+.card .pad{padding:14px}
 
-      <div class="card">
-        <div class="product-img">
-          <img src="images/urun3.jpg" alt="Premium Sneakers">
-        </div>
-        <div class="card-body">
-          <h3>Premium Sneakers</h3>
-          <div class="price">$79.99</div>
-          <p class="section-sub" style="margin:8px 0 12px;">Minimal design, comfortable sole, clean street look.</p>
-          <button class="btn btn-primary" onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
-        </div>
-      </div>
+/* Grid */
+.grid{
+  display:grid;
+  gap:14px;
+}
+.grid-3{grid-template-columns:repeat(3,1fr)}
+.grid-2{grid-template-columns:repeat(2,1fr)}
+@media (max-width:900px){
+  .grid-3,.grid-2{grid-template-columns:1fr}
+}
 
-    </div>
-  </div>
-</section>
+/* Images */
+.img-box{
+  height:220px;
+  background:#ddd;
+  overflow:hidden;
+}
+.img-box img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
 
-<footer class="footer">
-  <div class="footer-inner">
-    <div>© 2026 Style & Trend</div>
-    <div>
-      <a href="about.html">About</a> ·
-      <a href="contact.html">Contact</a>
-    </div>
-  </div>
-</footer>
+/* About images (no crop) */
+.about-img img{
+  width:100%;
+  height:auto;
+  display:block;
+}
 
-<script>
-  // ✅ Sepeti hangi isimle kaydettiysen bul, cart'a taşı (migrate)
-  function getCartAnyKey(){
-    const keys = ["cart", "cartItems", "basket", "sepet"];
-    for(const k of keys){
-      const raw = localStorage.getItem(k);
-      if(raw){
-        try {
-          const parsed = JSON.parse(raw);
-          if(Array.isArray(parsed)) return { key: k, cart: parsed };
-        } catch(e){}
-      }
-    }
-    return { key: "cart", cart: [] };
-  }
+/* Cart list rows */
+.row{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+  padding:12px 14px;
+  border:1px solid #e6e6e6;
+  border-radius:12px;
+  background:#fff;
+}
+.total{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-top:14px;
+  padding-top:14px;
+  border-top:1px solid #e6e6e6;
+  font-weight:900;
+}
 
-  function normalizeCart(){
-    const found = getCartAnyKey();
-    // migrate to standard key "cart"
-    localStorage.setItem("cart", JSON.stringify(found.cart));
-    if(found.key !== "cart") localStorage.removeItem(found.key);
-    return found.cart;
-  }
-
-  function updateCartCount(){
-    const cart = normalizeCart();
-    const el = document.getElementById("cartCount");
-    if(el) el.textContent = cart.length;
-  }
-
-  // ✅ GLOBAL addToCart (onclick bunu görmek zorunda)
-  function addToCart(name, price){
-    const cart = normalizeCart();
-    cart.push({ name, price });
-    localStorage.setItem("cart", JSON.stringify(cart));
-    updateCartCount();
-    alert(name + " added to cart!");
-  }
-
-  window.addEventListener("load", updateCartCount);
-</script>
-
-</body>
-</html>
+/* Footer */
+.footer{
+  margin-top:20px;
+  background:#fff;
+  border-top:1px solid #e6e6e6;
+}
+.footer .container{
+  padding:16px;
+  display:flex;
+  justify-content:space-between;
+  flex-wrap:wrap;
+  gap:10px;
+  color:#666;
+  font-size:14px;
+}
